2011-08-27  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_to): Don't bail out early when reaching
	position beyond to_charpos, if we are scanning backwards.
	(move_it_vertically_backward): When DY == 0, make sure we get to
	the first character in the line after the newline.

2011-08-27  Paul Eggert  <eggert@cs.ucla.edu>

	* ccl.c: Improve and simplify overflow checking (Bug#9196).
	(ccl_driver): Do not generate an out-of-range pointer.
	(Fccl_execute_on_string): Remove unnecessary check for
	integer overflow, noted by Stefan Monnier in
	<http://lists.gnu.org/archive/html/emacs-devel/2011-08/msg00979.html>.
	Remove a FIXME that didn't need fixing.
	Simplify the newly-introduced buffer reallocation code.

2011-08-27  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/alloc.$(O)): Depend on lib/verify.h.

2011-08-26  Paul Eggert  <eggert@cs.ucla.edu>

	Integer and memory overflow issues (Bug#9196).

	* doc.c (get_doc_string): Rework so that
	get_doc_string_buffer_size is the actual buffer size, rather than
	being 1 less than the actual buffer size; this makes xpalloc more
	convenient.

	* image.c (x_allocate_bitmap_record, cache_image):
	* xselect.c (Fx_register_dnd_atom):
	Simplify previous changes by using xpalloc.

	* buffer.c (overlay_str_len): Now ptrdiff_t, not EMACS_INT,
	since either will do and ptrdiff_t is convenient with xpalloc.

	* charset.c (charset_table_size)
	(struct charset_sort_data.priority): Now ptrdiff_t.
	(charset_compare): Don't overflow if priorities differ greatly.
	(Fsort_charsets): Don't assume list length fits in int.
	Check for size-calculation overflow when allocating sort data.
	(syms_of_charset): Allocate an initial charset table that is
	just under 64 KiB, to avoid problems with glibc malloc and mmap.

	* cmds.c (internal_self_insert): Check for size-calculation overflow.

	* composite.h (struct composition.glyph_len): Now int, not unsigned.
	The actual value is always <= INT_MAX, and leaving it unsigned made